--- a/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -31,4 +31,42 @@
     <b>Slice:1:2</b>
     <p class="text-primary">{{ clients() | slice : 1 : 2 }}</p>
   </app-card>
+
+  <app-card title="JsonPipe">
+    <pre class="text-primary">{{ clients() | json }}</pre>
+    <pre class="text-primary">{{ client() | json }}</pre>
+    <p class="text-primary"></p>
+  </app-card>
+  <app-card title="KeyVluePipe">
+    <ul>
+      @for (item of profile |keyvalue; track $index) {
+      <li>
+        <strong class="text-secondary">{{ item.key | titlecase }}: </strong>
+        <span>
+          {{ item.value }}
+        </span>
+      </li>
+      }
+    </ul>
+  </app-card>
+
+  <app-card title="AsyncPipe">
+    <p>{{ promiseValue | async }}</p>
+    @if (promiseValue|async; as value) {
+    <p class="text-secondary">{{ value }}</p>
+    }
+    <!--  -->
+    @else {
+    <p class="text-accent">Espere por favor...</p>
+    }
+
+    <h3 class="text-2xl">ObservableAsyncPipe</h3>
+    @if (myObservableTimer|async; as value) {
+    <p class="text-secondary">Valor: {{ value }}</p>
+    }
+    <!--  -->
+    @else {
+    <p class="text-accent">Cargando...</p>
+    }
+  </app-card>
 </div>
